welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: value =< is not a member of Int
      if (nums(k)+1 =< nums(k+2)){
                    ^has271:5: error: value =< is not a member of Int
        if (nums(k)-3 =< nums(k+2)){
                      ^