welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
  for (k<-0 to nums.length-3){
    if(nums(k)+5==nums(k+1)){
      if (nums(k)+1 =< nums(k+2)){
        if (nums(k)-3 =< nums(k+2)){
          return true
          
        }
        
      }
    }
  }
  return false
}